--- a/pc_info.html
+++ b/pc_info.html
@@ -7,13 +7,17 @@
     Tutorial Case
     
     Chocolate Infographic Page
-    Author: 
-    Date:  
+    Author: Nik is Awesome
+    Date: 09/06/2025
 
     Filename: pc_info.html
    -->
    <meta charset="utf-8" />
    <title>Chocolate Infographic</title>
+   <link href="CSS/pc_reset.css" rel="stylesheet" />
+   <link href="CSS/pc_styles3.css" rel="stylesheet" />
+   <link href="CSS/pc_info.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -30,6 +34,7 @@
       </nav>
       <h1>All About Chocolate</h1>
    </header>
+
    <main id="infographic">
       <div id="info1" class="infobox">
          <img src="Images/info1.png" alt="chocolate box" />
